Spring boot for knowledge bot

--- a/knowledgechatbot/src/main/resources/application.properties
+++ b/knowledgechatbot/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 # OpenAI API Key
 # Replace YOUR_OPENAI_API_KEY with your actual OpenAI API Key
 # For production, consider using environment variables like: spring.ai.openai.api-key=${OPENAI_API_KEY}
-spring.ai.openai.api-key=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
-
+spring.ai.openai.api-key=OPENAI_API_KEY
 # You can specify the default chat model to use. gpt-4o is powerful, gpt-3.5-turbo is more cost-effective.
 # spring.ai.openai.chat.options.model=gpt-4o
 spring.ai.openai.chat.options.model=gpt-3.5-turbo
