Spring boot for knowledge bot - added RAG

--- a/knowledgechatbot/src/main/resources/application.properties
+++ b/knowledgechatbot/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # OpenAI API Key
 # Replace YOUR_OPENAI_API_KEY with your actual OpenAI API Key
 # For production, consider using environment variables like: spring.ai.openai.api-key=${OPENAI_API_KEY}
-spring.ai.openai.api-key=OPENAI_API_KEY
+spring.ai.openai.api-key=<OPENAI_API_KEY>
 # You can specify the default chat model to use. gpt-4o is powerful, gpt-3.5-turbo is more cost-effective.
 # spring.ai.openai.chat.options.model=gpt-4o
 spring.ai.openai.chat.options.model=gpt-3.5-turbo
@@ -37,6 +37,7 @@ app.rag.prompt-template=\
     You are a helpful cricket expert chatbot.\n\
     Use the following pieces of context to answer the user's question.\n\
     If you don't know the answer, just say that you don't know, don't try to make up an answer.\n\
+    {wikipedia_status}\n\
     ---------------------\n\
     Context:\n\
     {context}\n\
